--- a/index.html
+++ b/index.html
@@ -11,24 +11,19 @@
         <h1>My Location To Your Destination</h1>
         <form id="routeForm">
             <div>
-                <label for="startLat">Start Latitude:</label>
-                <input type="number" id="startLat" name="startLat" step="any" required>
+                <label for="startAddress">Start Address:</label>
+                <input type="text" id="startAddress" name="startAddress" placeholder="Enter start address" required>
+                <div>
+                    <input type="checkbox" id="useCurrentLocation">
+                    <label for="useCurrentLocation">Use My Current Location</label>
+                </div>
             </div>
             <div>
-                <label for="startLng">Start Longitude:</label>
-                <input type="number" id="startLng" name="startLng" step="any" required>
-            </div>
-            <div>
-                <label for="endLat">End Latitude:</label>
-                <input type="number" id="endLat" name="endLat" step="any" required>
-            </div>
-            <div>
-                <label for="endLng">End Longitude:</label>
-                <input type="number" id="endLng" name="endLng" step="any" required>
+                <label for="endAddress">End Address:</label>
+                <input type="text" id="endAddress" name="endAddress" placeholder="Enter destination address" required>
             </div>
             <button type="submit">Calculate Route</button>
         </form>
-        
     </div>
     <div id="map"></div>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyACT643vXc1xh2neDyHjekuCOtrj1DXBcY&callback=initMap" async defer></script>
